<resources>
    <string name="app_name">PacketCapper</string>
    <string name="capture">Capture</string>
    <string name="error">Error</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="setting_up">Setting up</string>
    <string name="please_wait">Please wait…</string>
    <string name="notice">Notice</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="set_output_directory">Set Output Directory</string>
    <string name="set_capture_args">Set Capture Parameters</string>
    <string name="set_capture_interface">Set Capture Interface</string>
    <string name="rate_app">Rate App</string>
    <string name="about">About</string>
    <string name="su_not_available">Super user is not available. This application requires root privileges to function properly</string>
    <string name="rate_it">Like the app? Rate it!</string>
    <string name="browse_captures">Browse Captures</string>
</resources>
