<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_set_output_directory"
        android:title="@string/set_output_directory"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_browse_captures"
        android:title="@string/browse_captures"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_set_capture_args"
        android:title="@string/set_capture_args"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_set_capture_interface"
        android:title="@string/set_capture_interface"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_rate_app"
        android:title="@string/rate_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>